# GoldenratioFHE

./: CMakeLists.txt  README.md  SECURITY_ANALYSIS.md
engines/: benchmark.cpp  fhe_v10.cpp
engines/phi-fractal/: fractal_engine.cpp
gateway/spiral-db/: spiral_db.cpp
